force-app/main/default/objects/ShopifyCustomer__c/ShopifyCustomer__c.object-meta.xml
<CustomObject>
    <enableHistory>false</enableFeeds>
    <label>Shopify Customer</label>
    <nameField>
        <displayFormat>CUST-{0000}</displayFormat>
        <label>Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shopify Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>