force-app/main/default/objects/ShopifyCustomer__c/fields/ShopifyCustomerId__c.field-meta.xml
<CustomField>
    <fullName>ShopifyCustomerId__c</fullName>
    <externalId>true</externalId>
    <label>Shopify Customer ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>